# dust

./: .gitignore  .tauri-key.pub  README.md  README.zh.md  dust.key.pub  index.html  package.json
.github/scripts/: gen-update-json.mjs
.github/workflows/: build.yml
src/: App.tsx  i18n.ts  main.tsx  router.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  harvest.rs  mod.rs  scan.rs
src-tauri/src/config/: mod.rs
src-tauri/src/scanner/: blacklist.rs  engine.rs  mod.rs  rules.rs  stats.rs
src/components/dashboard/: DropZone.tsx  ResultCard.tsx  ResultList.tsx  ScanInput.tsx  StatsPanel.tsx  TechStackChart.tsx
src/components/harvest/: HarvestDialog.tsx
src/components/layout/: MacTrafficLights.tsx  Navbar.tsx  SettingsDrawer.tsx  WindowControls.tsx
src/components/settings/: Appearance.tsx  CustomRules.tsx  LanguageSettings.tsx  Whitelist.tsx  ZombieThreshold.tsx
src/hooks/: useColorMode.ts  useConfig.ts  useScan.ts  useThemeColor.ts
src/locales/en/: translation.json
src/locales/zh/: translation.json
src/routes/: __root.tsx  index.tsx  results.tsx  settings.tsx
src/stores/: scanStore.ts  settingsStore.ts
src/theme/: index.ts
src/types/: scan.ts  settings.ts
