[package]
name = "dust"
version = "0.1.0"
description = "Project dependency cleanup tool"
authors = ["Dust Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 高性能多线程目录扫描
jwalk = "0.8"
# 安全删除：移至回收站/废纸篓
trash = "3.1"
tauri-plugin-dialog = "2.7.1"
tokio = { version = "1.52.3", features = ["rt"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
